Mon Nov 10 11:12:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosEvent/CEC_Default_Factory.cpp:
          Initialise pointers with 0

        * orbsvcs/orbsvcs/CosEvent/CEC_Factory.h:
        * orbsvcs/tests/CosEvent/Timeout/TestEventConsumer_i.cpp:
        * orbsvcs/tests/CosEvent/Timeout/run_test.pl:
        * orbsvcs/tests/CosEvent/lib/Counting_Consumer.cpp:
          Layout changes

        * orbsvcs/tests/CosEvent/Timeout/TimeoutTestMain.cpp:
          shutdown s_orb when it is not nil, fixes valgrind reported
          leaks at shutdown

Mon Nov 10 11:02:11 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/orbsvcs/CosEvent/CEC_Event_Loader.cpp:
          Fix event channel cleanup.

Sat Nov  8 10:31:26 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * tao/Remote_Invocation.h:
        * tao/Remote_Invocation.inl:
          Updated to fix Windows compile problems.

Fri Nov  7 10:01:43 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * tao/DynamicInterface/DII_Invocation.h:
        * tao/DynamicInterface/DII_Invocation.cpp:
        * tao/DynamicInterface/DII_Invocation_Adapter.h:
        * tao/DynamicInterface/DII_Invocation_Adapter.cpp:
        * tao/DynamicInterface/Request.cpp:
        * tao/Invocation_Adapter.h:
        * tao/Invocation_Adapter.inl:
        * tao/Invocation_Adapter.cpp:
        * tao/Messaging/Asynch_Invocation.cpp:
        * tao/Messaging/Asynch_Invocation_Adapter.cpp:
        * tao/Remote_Invocation.h:
        * tao/Remote_Invocation.inl:
        * tao/Remote_Invocation.cpp:
        * tao/Synch_Invocation.cpp:
          Refactored Invocation(_Adapter) classes to integrate support
          for output byte_order overrides.
          This makes supporting DII gateway byte_order overrides easier
          and more consistent and removes some extra locks in the DII
          invocation path.
          Fixed broken support for DII AMI byte_order overrides and